--- a/quiz/quizzzz.html
+++ b/quiz/quizzzz.html
@@ -1,1 +1,32 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz</title>
+    <link rel="Stylesheet" href="./stlye.css">
+</head>
+
+<body>
+    <header>
+        <div class="content" id="swap">
+            <h1 class="welcome">The Quiz</h1>
+            <button id="start">Start</button>
+            <h2 id="countdown"></h2>
+            <div class="game">
+                <h1 class="game">Game</h1>
+                <p id="main">
+
+                </p>
+
+            </div>
+
+        </div>
+
+    </header>
+    <script src="./scripts.js"></script>
+</body>
+
+</html>
